[package]
name = "vote"
version = "0.1.0"
edition = "2024"
description = "Cryptographically secure voting system"
license = "MIT OR Apache-2.0"

[dependencies]
# Core cryptographic primitives - start minimal
blake3 = "1.8"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"

# Error handling
thiserror = "2.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# UUID and time
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Additional crypto dependencies
hex = "0.4"
subtle = "2.6"
zeroize = "1.8"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
base64 = "0.22.1"

[dev-dependencies]
hex = "0.4"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true