[package]
name = "vote-benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
vote = { path = ".." }
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }
tokio = { version = "1.0", features = ["full"] }
uuid = "1.0"
hex = "0.4"
rand = "0.8"

[[bench]]
name = "crypto_operations"
harness = false

[[bench]]
name = "voting_workflow"
harness = false

[[bench]]
name = "security_monitoring"
harness = false